--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,17 +8,75 @@
     <meta charset="UTF-8">
     <title>Login</title>
 </head>
+<style>
+    * { padding: 0; margin: 0; }
+
+    html, body {
+        height: 100%;
+        background: #ffffff;
+    }
+
+    #container {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
+
+    #loginBox {
+        width: 300px;
+        text-align: center;
+        background-color: #ffffff;
+    }
+    .input-form-box {
+        border: 0px solid #ff0000;
+        display: flex;
+        margin-bottom: 5px;
+    }
+    .input-form-box > span {
+        display: block;
+        text-align: left;
+        padding-top: 5px;
+        min-width: 65px;
+    }
+    .button-login-box {
+        margin: 10px 0;
+    }
+    #loginBoxTitle {
+        color:#000000;
+        font-weight: bold;
+        font-size: 32px;
+        text-transform: uppercase;
+        padding: 5px;
+        margin-bottom: 20px;
+        background: linear-gradient(to right, #111111, darkgray);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+    #inputBox {
+        margin: 10px;
+    }
+
+    #inputBox button {
+        padding: 3px 5px;
+    }
+</style>
 <body>
-<div>
-    <div class="login-id-label">아이디</div>
-    <input type="text" name="username" id="username" class="loginUsername">
-
-    <div class="login-id-label">비밀번호</div>
-    <input type="password" name="password" id="password" class="loginPassword">
-
-    <button id="login-id-submit" onclick="login()">로그인</button>
-    <button id="login-id-btn" onclick="location.href='/user/signup'">회원가입</button>
+<div id="container">
+    <div id="loginBox">
+        <div id="loginBoxTitle">Just Do it!</div>
+        <div id="inputBox">
+            <div class="input-form-box"><span>아이디 </span><input type="text" name="uid" class="form-control"></div>
+            <div class="input-form-box"><span>비밀번호 </span><input type="password" name="upw" class="form-control"></div>
+            <div class="button-login-box" >
+                <button id="login-id-submit" class="btn btn-primary" onclick="login()">로그인</button>
+                <button id="login-id-btn" class="btn btn-primary" onclick="location.href='/user/signup'">회원가입</button>
+            </div>
+        </div>
+    </div>
 </div>
+
 </body>
 <script>
     $(document).ready(function () {
