--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -50,7 +50,7 @@
         text-transform: uppercase;
         padding: 5px;
         margin-bottom: 20px;
-        background: linear-gradient(to right, #111111, darkgray);
+        background: linear-gradient(to right, #270a09, #8ca6ce);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
     }
@@ -61,14 +61,14 @@
     #inputBox button {
         padding: 3px 5px;
     }
+
 </style>
-<body>
-<div id="container">
+<body><div id="container">
     <div id="loginBox">
         <div id="loginBoxTitle">Just Do it!</div>
         <div id="inputBox">
-            <div class="input-form-box"><span>아이디 </span><input type="text" name="uid" class="form-control"></div>
-            <div class="input-form-box"><span>비밀번호 </span><input type="password" name="upw" class="form-control"></div>
+            <div class="input-form-box"><span>아이디 </span><input type="text" name="username" id="username" class="form-control"></div>
+            <div class="input-form-box"><span>비밀번호 </span><input type="password" name="password" id="password" class="form-control"></div>
             <div class="button-login-box" >
                 <button id="login-id-submit" class="btn btn-primary" onclick="login()">로그인</button>
                 <button id="login-id-btn" class="btn btn-primary" onclick="location.href='/user/signup'">회원가입</button>
@@ -76,7 +76,6 @@
         </div>
     </div>
 </div>
-
 </body>
 <script>
     $(document).ready(function () {
